--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media all and (max-width: 1000px) {
+@media (max-width: 1000px) {
   .lesson {
     width: 50%;
     margin-bottom: 50px;
@@ -14,7 +14,7 @@
 }
 
 /* For Smartphones */
-@media all and (max-width: 670px) {
+@media(max-width: 670px) {
   .lesson {
     width: 100%;
   }
