--- a/stylesheet.css
+++ b/stylesheet.css
@@ -121,7 +121,7 @@ header {
   color: white;
   float: right;
   font-size: 25px;
-  padding: 21px 0;
+  padding: 21px 21px 10px 0px;
   display:none;
 }
 
